Bug #257986 --> Problem deleting local folders with forward slashes in the folder name

sr=bienvenu