mozilla/mailnews/local/src/nsLocalMailFolder.cpp
@@ -2005,6 +2005,12 @@ nsMsgLocalMailFolder::CopyFolderLocal(nsIMsgFolder *srcFolder, PRBool isMoveFold
   nsAutoString folderName;
   folderName.Assign(idlName);
   
+  nsCAutoString tempSafeFolderName;
+  tempSafeFolderName.AssignWithConversion(folderName.get());
+  NS_MsgHashIfNecessary(tempSafeFolderName);
+  nsAutoString safeFolderName;
+  safeFolderName.AssignWithConversion(tempSafeFolderName);
+
   srcFolder->ForceDBClosed();	  
   
   nsCOMPtr<nsIFileSpec> oldPathSpec;
@@ -2043,7 +2049,7 @@ nsMsgLocalMailFolder::CopyFolderLocal(nsIMsgFolder *srcFolder, PRBool isMoveFold
   rv = summarySpec.CopyToDir(newPath);
   NS_ENSURE_SUCCESS(rv, rv);
   
-  rv = AddSubfolder(folderName, getter_AddRefs(newMsgFolder));  
+  rv = AddSubfolder(safeFolderName, getter_AddRefs(newMsgFolder));  
   NS_ENSURE_SUCCESS(rv, rv);
 
   newMsgFolder->SetPrettyName(folderName.get());
